# filesystem-client

./: CMakeLists.txt  README.md  addbucket.cpp  addbucket.h  addbucket.ui  bucket.cpp  bucket.h  build.iss  config.cpp  config.h  filesystem.cpp  filesystem.h  filesystem.ui  login.cpp  login.h  login.ui  logo.rc  main.cpp  uploadselect.cpp  uploadselect.h  uploadselect.ui  util.hpp  version.json
